--- a/settings.example.yml
+++ b/settings.example.yml
@@ -3,4 +3,4 @@ ping_url: 'http://example.com/tp'
 form_method: POST
 #ping_url: 'http://example.com/tr'
 #form_method: GET
-#ping_url: 'http://192.212.100.31/t'
+#ping_url: 'http://192.212.100.31/tr'
