working on install and uninstall

--- a/iedup.csproj
+++ b/iedup.csproj
@@ -66,7 +66,7 @@
     <Compile Include="..\iedusm\IEdu.cs">
       <Link>IEdu.cs</Link>
     </Compile>
-    <Compile Include="iedup.cs" />
+    <Compile Include="IEduP.cs" />
     <Compile Include="ProcessAsCurrentUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProjectInstaller.cs" />
