--- a/iedup.csproj
+++ b/iedup.csproj
@@ -69,7 +69,7 @@
     <Compile Include="IEduP.cs" />
     <Compile Include="ProcessAsCurrentUser.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="ProjectInstaller.cs" />
+    <Compile Include="IEduPInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
